Harri Porten - 12/07/99

  - fixed segfault resulting from `kvt -e' without a trailing command

Matthias Hoelzer-Kluepfel - 08/06/99
 
  - fixed root privilege handling 
  - fixed security hole in "New Terminal" menu entry
  - added Unix98 pty support

  (problem report thanks to Olaf Kirch <okir@caldera.de>)

Carsten Pfeiffer - 10/1/99
  - fixed commandline options not restored properly restored on 
    sessionmanagement
  - removed one commandline substition (-caption -> -T), that was done twice

Alex Zepeda - 1/1/99
  - removed all C++ style comments in command.c
  - properly #ifdef'd the inline #define.

since kvt-0.18.6	
  - fixed a few compiler warnings (mweilguni@kde.org)
  - configureable menu shortcuts for the root menu items (needed for some
    programs, because Alt-(H|F|O) are often used as accelerator keys.
	
since kvt-0.18.5
  - Now the Terminal-Dialog exchanges the meaning of Backspace and Delete
    This prevents us from having two Delete-keys and no Backspace-key (bmg)
  - a Patch for FreeBSD from Kevin Street <street@iName.com>
    FreeBSD has setupterm in libmytinfo (bmg)
  - HAVE_SETUPTERM used (bmg)
  - Now kvt searches again a list of TERM-entries and takes the first
    (`best') available.  This should minimize problems with
    unincomplete or antiquated terminfo/termcap databases. (This is
    based on curses.) (bmg)
 - changed the layouting of the terminal-dialog. (bmg)

since kvt-0.18.4
 - added a hack for stupid clients like pine who cannot handle "\n"
    in selections but need "\r"   (Matthias)
 - fixes for VMS (Andrew Phillips)

since kvt-0.18.3
  - fixed a bug that made it impossible to resize the window with the
    menu when the window size was manipulated with the normal window
    manager resize mechanism (Mario Weilguni <mweilguni@kde.org>)
  - removed some DOS-newlines (^M), which cause compile errors on
    some compilers (Mario Weilguni <mweilguni@kde.org>)
  - fixed "New Terminal" (Matthias)